# SPIFFS_SDSPI_Test

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.project
main/: CMakeLists.txt  main.cpp
main/modules/storage/: base.cpp  base.h  sdcard.cpp  sdcard.h  spiffs.cpp  spiffs.h
main/spiffs/ui/html/: index.html
